<resources>
    <string name="app_name">CaptureMoment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dummy_caption">The story of life is quicker than the wink of an eye, the story of love is hello and goodbye until we meet again.</string>
    <string name="dummy_date">22 Maret 2022</string>
    <string name="dummy">Name Uploader</string>
    <string name="success_title_sign_in">Success Sign In</string>
    <string name="failed_title_sign_in">Failed to Sign In</string>
    <string name="success_message_sign_in">Let\'s take a Story to share</string>
    <string name="failed_message_sign_in">Check your username or password</string>
    <string name="success_title_sign_up">Success Sign Up</string>
    <string name="failed_title_sign_up">Failed to Sign Up</string>
    <string name="success_message_sign_up">"Now, Let Sign in"</string>
    <string name="failed_message_sign_up">Check your username or password</string>
    <string name="success_info">Success Info</string>
    <string name="failed_info">Warning Info</string>
    <string name="success_message_story">Story has been Uploaded</string>
    <string name="failed_message_story">Story not uploaded</string>
    <string name="empty_image">Please select an image</string>
    <string name="empty_description">Description must be filled</string>
    <string name="detail_title">%s\'s story</string>
    <string name="good_morning">Good Morning, </string>
    <string name="good_afternoon">Good Afternoon, </string>
    <string name="good_evening">Good Evening, </string>
    <string name="cd_icon">cd_icon</string>
    <string name="cd_image">CD Image</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="set_language">Set Language</string>
    <string name="set">Set</string>
    <string name="sign_out">Sign Out</string>
    <string name="tagline">Place to Explore experience and share your story for our friends on Dicoding Academy</string>
    <string name="gretting">Hello, Fellas</string>
    <string name="sign_in">Sign In</string>
    <string name="does_nt_have_account">Does\'nt Have Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="tagline_register">Let\'s create an Account to start surfing</string>
    <string name="full_name">Full Name</string>
    <string name="already">Already have Account?</string>
    <string name="capture_your_story_to_us">Capture your Story to us</string>
    <string name="error_content">Cannot Load the Content \n check your Connection Please</string>
    <string name="email_error_message">Email address is not valid</string>
    <string name="password_error_message">Passwords must be at least 6 characters</string>
    <string name="error_pick_image">Error pick image</string>
    <string name="error_showing_camera">Error showing camera</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="style_map">Style Map</string>
    <string name="map_normal">Normal</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_silver">Silver</string>
    <string name="map_night">Night</string>
    <string name="map_view">Map View</string>
    <string name="signout_title">Are You Sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="share_my_location">Share My Location?</string>
    <string name="creat_story">Create Story</string>
    <string name="location">Location</string>
    <string name="map_story">Map Story</string>
</resources>