<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_blue"
    tools:context=".ui.authentication.signup.SignUpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/illustration_register"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_auth"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gretting"
            android:alpha="0"
            android:textColor="@color/dark_blue_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextStyle.Content.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/tagline_register"
            android:textColor="@color/dark_blue_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.example.capturemoment.ui.customview.MyEmailEditText
            android:id="@+id/myEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="12dp"
            android:alpha="0"
            android:paddingHorizontal="12dp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints="name"
            android:drawableStart="@drawable/custom_ic_person"
            android:background="@drawable/shape_edit_text"
            android:drawablePadding="4dp"
            android:paddingHorizontal="4dp"
            android:alpha="0"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myEmailEditText" />

        <com.example.capturemoment.ui.customview.MyPasswordEditText
            android:id="@+id/myPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:drawablePadding="12dp"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@+id/et_full_name"
            tools:layout_editor_absoluteX="24dp" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myPasswordEditText" />

        <LinearLayout
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:alpha="0"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already"
                android:textColor="@color/dark_blue_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sign_in"
                android:textColor="@color/blue_primary" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/view_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/transparant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.Wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/blue_dark" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>