<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary"
    tools:context=".ui.home.story.StoryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="@color/blue_primary"
            app:title="@string/app_name"
            android:elevation="0dp"
            app:elevation="0dp"
            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
            app:collapsedTitleTextColor="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingVertical="16dp"
                android:paddingHorizontal="24dp"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/tv_welcome"
                    style="@style/TextStyle.SubTitle.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_morning"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_welcome_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/dummy"
                    style="@style/TextStyle.SubTitle"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_welcome"
                    app:layout_constraintStart_toEndOf="@+id/tv_welcome"
                    app:layout_constraintTop_toTopOf="@+id/tv_welcome"
                    tools:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/TextStyle.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/capture_your_story_to_us"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:collapseIcon="@drawable/ic_check_black_24dp"
                app:layout_collapseMode="none"
                app:elevation="0dp"
                android:elevation="0dp"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/view_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_row_story" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <RelativeLayout
        android:id="@+id/view_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/iv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:alpha="0"
            android:layout_centerInParent="true"
            android:src="@drawable/illustration_no_data"
            android:contentDescription="@string/cd_image" />

        <TextView
            android:id="@+id/tv_not_found_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_no_data"
            android:layout_centerInParent="true"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:textColor="@color/white"
            android:text="@string/error_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_data" />

    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>