<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemCard"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:layout_marginVertical="12dp"
    android:layout_marginHorizontal="24dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/illustration_hello"
            android:scaleType="centerCrop"
            android:transitionName="iv_photo"
            android:src="@drawable/sample"
            app:riv_corner_radius="20dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gradient"
            android:contentDescription="cd_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_name_uploader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dummy"
                android:transitionName="tv_name_uploader"
                style="@style/TextStyle.Title"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/tv_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                android:transitionName="tv_description"
                android:text="@string/dummy_caption"
                android:textColor="@color/white"
                style="@style/TextStyle.Content.Regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvdate"
                style="@style/TextStyle.Content.Regular"
                android:layout_width="0dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="2dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/dummy_date"
                android:transitionName="tv_date"
                android:textColor="@color/dark_gray_300"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_date"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>